Improved handling of multiple AS4s/documentTypeIds for one country
